# savegame_manager

./: Cargo.toml  LICENSE  README.md  build.rs
src/: backup.rs  gui.rs  main.rs  screenshot.rs  utils.rs  watcher.rs
