[package]
name = "savegame_manager"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.8.10"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
notify = "6.1.1"
fhc = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.37"
anyhow = "1.0.81"
opener = "0.7.0"
trash = "4.1.0"

[build-dependencies]
winres = "0.1.12"
